<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DimensionSearchFragement.OringFragment">

    <!-- TODO: Update blank fragment layout -->
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/Home_blank_fragment" />-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="161dp"
            android:layout_height="109dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/str_mode"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_unit"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="70dp"
            android:text="@string/str_ID"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="70dp"
            android:text="@string/str_CS"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView">


            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/select_toggle_mode_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <!--  필수 입력 항목 , 상단 버튼 -->
                <com.google.android.material.button.MaterialButton
                    style="@style/IconOnlyButton"
                    android:id="@+id/top_toggle_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/baseline_keyboard_24" />

                <com.google.android.material.button.MaterialButton
                    style="@style/IconOnlyButton"
                    android:id="@+id/top_toggle_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/baseline_calendar_view_day_24"
                    />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/select_toggle_unit_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <!--  필수 입력 항목 , 상단 버튼 -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bottom_toggle_button_1"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_mm" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bottom_toggle_button_2"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_inch" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/intro_login_btn_shape"
            android:orientation="horizontal"
            android:weightSum="7"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/ET_id_noun"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:hint="@string/str_zero_dot_zero" />

<!--            android:background ="null"-->
            <TextView
                android:id="@+id/TV_id_noun"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:text="@string/str_mm" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/intro_login_btn_shape"
            android:orientation="horizontal"
            android:weightSum="7"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/ET_cs_noun"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:hint="@string/str_zero_dot_zero" />

            <TextView
                android:id="@+id/TV_cs_noun"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:text="@string/str_mm" />
        </LinearLayout>

        <TextView
            android:id="@+id/TV_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/str_mm_description"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3.4"
            app:layout_constraintTop_toBottomOf="@+id/TV_desc"
            tools:layout_editor_absoluteX="3dp">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_circle_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/green_circle" />

                <TextView
                    android:id="@+id/TV_matched"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/str_Matched"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_circle_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/blue_circle" />

                <TextView
                    android:id="@+id/TV_subtituded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/str_Substituted"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_circle_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/red_circle" />

                <TextView
                    android:id="@+id/TV_Closer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/str_Closer"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/holo_orange_light"
            android:orientation="horizontal"
            android:weightSum="6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/red_circle"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/TV_column_id"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/str_ID"
                    android:textColor="@color/design_default_color_on_secondary" />

                <ImageView
                    android:id="@+id/IV_plus_and_minus1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="5dp"
                    android:src="@drawable/icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TV_column_cs"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/str_CS"
                    android:textColor="@color/design_default_color_on_secondary" />

                <ImageView
                    android:id="@+id/IV_plus_and_minus2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/icon" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TV_column_standard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/str_Standard"
                    android:textColor="@color/design_default_color_on_secondary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TV_column_no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/str_No"
                    android:textColor="@color/design_default_color_on_secondary" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/oring_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>